update theme / fix theme access issue on angular / fix theme list response from backend / todo set up UX as expected
